refactor: update library versions for improved compatibility and performance

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,40 +1,40 @@
 [versions]
 agp = "8.11.1"
-kotlin = "2.0.21"
+kotlin = "2.2.0"
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.9.0"
+lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
-composeBom = "2025.05.01"
-googleGmsGoogleServices = "4.4.2"
-firebaseBom = "33.14.0"
-daggerHilt = "2.56.2"
+composeBom = "2025.07.00"
+googleGmsGoogleServices = "4.4.3"
+firebaseBom = "34.0.0"
+daggerHilt = "2.57"
 hiltCompiler = "1.2.0"
 navigationHilt = "1.2.0"
-kotlinxSerializationPlugin = "2.1.20-RC"
-kotlinxSerialization = "1.8.1"
-firebaseFirestore = "25.1.4"
-navigationCompose = "2.9.0"
-lifecycle = "2.9.0"
+kotlinxSerializationPlugin = "2.2.0"
+kotlinxSerialization = "1.9.0"
+firebaseFirestore = "26.0.0"
+navigationCompose = "2.9.2"
+lifecycle = "2.9.2"
 materialIcons = "1.7.8"
 datastore = "1.1.7"
-room = "2.7.1"
+room = "2.7.2"
 activityKtx = "1.10.1"
-firebaseAuth = "23.2.1"
+firebaseAuth = "24.0.0"
 credentials = "1.5.0"
-playServicesAuth = "21.3.0"
+playServicesAuth = "21.4.0"
 credentialsPlayServicesAuth = "1.5.0"
 googleid = "1.1.1"
 genAI = "0.9.0"
 composeMarkdown = "0.5.7"
 paging = "3.3.6"
 kotlinReflect = "2.1.21"
-workManager = "2.10.1"
-retrofit2 = "2.11.0"
-gson = "2.13.0"
-okHttp = "4.12.0"
+workManager = "2.10.2"
+retrofit2 = "3.0.0"
+gson = "2.13.1"
+okHttp = "5.1.0"
 composeChart = "0.1.7"
 appcompat = "1.7.1"
 
