--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" android:minSdkVersion="33" />
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
 
@@ -23,8 +23,6 @@
         android:theme="@style/Theme.Reflect"
         tools:targetApi="33">
         <receiver android:name=".notification.receiver.ReminderReceiver" android:exported="false" />
-        <receiver android:name=".notification.receiver.MonthlySummaryReceiver" android:exported="false" />
-        <receiver android:name=".notification.receiver.WeeklySummaryReceiver" android:exported="false" />
 
         <activity
             android:name=".presentation.main.MainActivity"
